fixed alignment of bg graphic

--- a/src/scss/blocks/_hero.scss
+++ b/src/scss/blocks/_hero.scss
@@ -1,7 +1,7 @@
 .heroBg {
     position: absolute;
     width: 100%;
-    background: url(../images/home/Polygon.svg) no-repeat 90% 0;
+    background: url(../images/home/Polygon.svg) no-repeat bottom center;
     /* margin: 0 auto; */
     overflow: hidden;
     background-size: cover;
